# studdy-buddy

backend/: .env.example  .gitignore  main.py  pyproject.toml  start.sh
backend/src/: config.py  pdf_parser.py  pdf_processor.py  rag_service.py  text_chunker.py  vector_store.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  Header.jsx  LeftPanel.jsx  PDFViewer.jsx  ProgressTracker.jsx  QuizInterface.jsx  RightPanel.jsx
